Fixed craeteAcnt input box alignment, edited css, added requirements to create account and login fields

--- a/public/css/accGuide.css
+++ b/public/css/accGuide.css
@@ -8,8 +8,8 @@
 .accountGuide {
     display: inline-block;
     margin-top: 3rem;
-    width: 600px;
-    height: 200px;
+    width: 650px;
+    height: 250px;
     border-radius: 5px;
     padding: 16px;
     background-color: white;
@@ -17,12 +17,14 @@
 }
 
 .guide__text_1{
+    font-size: 20px;
     text-align: center;
     margin-bottom: 1rem;
 
 }
 
 .guide__text_2 {
+    font-size: 20px;
     text-align: center;
     margin-bottom: 2.5rem;
 
@@ -31,13 +33,8 @@
 .account__container {
     display: flex;
     margin-right: 3rem;
-    
-    
 }
 
-.guide__label {
-
-}
 
 .account__button__container {
     display: flex;
@@ -47,6 +44,7 @@
 .login__button {
     margin-top: 1rem;
     margin-bottom: 1rem;
+    margin-right: 1rem;
     width: 250px;
     padding: 10px;
     border: 1px solid black;
@@ -61,7 +59,8 @@
 
 .create__button {
     margin-top: 1rem;
-    margin-bottom: 3rem;
+    margin-bottom: 1rem;
+    margin-left: 1rem;
     width: 250px;
     padding: 10px;
     border: 1px solid black;
@@ -71,5 +70,4 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
-
 }
