--- a/public/css/login.css
+++ b/public/css/login.css
@@ -2,7 +2,7 @@
     display: inline-block;
     margin-top: 3rem;
     width: 500px;
-    height: 500px;
+    height: 480px;
     border-radius: 5px;
     padding: 16px;
     background-color: white;
@@ -14,6 +14,7 @@
     font-family: '', monospace;
     font-size: 36px;
     margin-bottom: 0.5rem;
+    margin-top: 1rem;
 }
 
 .login__form {
